src/test/ui/borrowck/borrowck-while-break.stderr
error[E0381]: used binding `v` isn't initialized in all conditions
  --> $DIR/borrowck-while-break.rs:7:20
   |
LL |     let v;
   |         - binding declared here but left uninitialized
LL |     while cond {
   |           ---- `v` is uninitialized if this condition isn't met and the `while` loop runs 0 times
...
LL |     println!("{}", v);
   |                    ^ `v` used here but it isn't initialized in all conditions
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
